--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-4">
-                                <div class="case-text">
+                                <div class="case-text bg-left">
                                     <img src="image/banner/id-card.png" alt="">
                                     <h2>The greatest firm you can trust</h2>
                                     <p>Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
                                 </div>
                             </div>
                             <div class="col-4">
-                                <div class="case-text">
+                                <div class="case-text bg-mid">
                                     <img src="image/banner/book.png" alt="">
                                     <h2>Case Investigation</h2>
                                     <p>Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
                                 </div>
                             </div>
                             <div class="col-4">
-                                <div class="case-text">
+                                <div class="case-text bg-right">
                                     <img src="image/banner/magnifying-glass-1.png" alt="">
                                     <h2>Search Directtory</h2>
                                     <p>Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
