--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/banner.css">
     <link rel="stylesheet" href="css/button.css">
     <link rel="stylesheet" href="css/grid-system.css">
+    <link rel="stylesheet" href="css/footer.css">
 
 </head>
 
@@ -98,6 +99,115 @@
         </div>
     </header>
 
+
+    <footer>
+        <div class="footer-top">
+            <img src="image/footer/Vector-Smart-Object-copy.png" alt="">
+            <div class="footer-top-text">
+                <p>Ut enim ad minim veniam, quis nostrud cittion ullamco laboris nisi ut aliquip cosquat uis aute irure dolor ullamco nisi inkabris reprhenderit labore cittion ullamco laboris nisi ut aliquip.</p>
+            </div>
+            <img src="image/footer/----------------------------.png" alt="">
+        </div>
+        <div class="line-footer"></div>
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="line short"></div>
+                        <div class="line long"></div>
+                        <h3 class="tittle-box">contact us</h3>
+                        <div class="text-footer-bootom">
+                            <p><i class="fas fa-map-marker-alt ml-0"></i> 132, My Street, Kingston, New York
+                            </p>
+                            <p><i class="fas fa-phone ml-0"></i> 270 - 188 - 6026
+                            </p>
+                            <p><i class="mr-2px ml-0"></i> 270 - 188 - 6026
+                            </p>
+                            <p><i class="far fa-envelope ml-0 mr-2px"></i></i> domain@LawPlus.com
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="col-3">
+                        <div class="line short"></div>
+                        <div class="line long"></div>
+                        <h3 class="tittle-box">open time</h3>
+                        <div class="text-footer-bootom">
+                            <p class="om">Opening Day:</p>
+
+                            <p> Monday - Friday: 8am to 6pm
+                            </p>
+                            <p>Saturday: 9am to 5pm
+                            </p>
+                            <p class="om">Vacation:</p>
+                            <p> All Sunday Day
+                            </p>
+                            <p> All Vacation Holiday
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="line short"></div>
+                        <div class="line long"></div>
+                        <h3 class="tittle-box">Practice areas</h3>
+                        <div class="text-footer-bootom">
+                            <p><i class="fas fa-angle-double-right  ml-0"></i> Corporate & Commercial
+                            </p>
+
+
+                            <p><i class="fas fa-angle-double-right  ml-0"></i> Mergers & Acquisitions
+                            </p>
+                            <p><i class="fas fa-angle-double-right  ml-0"></i> Securities & Capital Market
+                            </p>
+
+                            <p><i class="fas fa-angle-double-right  ml-0"></i> Insurance, Finance & Banking
+                            </p>
+
+                            <p><i class="fas fa-angle-double-right  ml-0"></i>Real Estate & Construction
+                            </p>
+
+                            <p><i class="fas fa-angle-double-right  ml-0"></i> Intellectual Property
+                            </p>
+
+
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="line short"></div>
+                        <div class="line long"></div>
+                        <h3 class="tittle-box">our attorneys</h3>
+                        <div class="text-footer-bootom">
+                            <p><i class="fas fa-angle-double-right  ml-0"></i> Marilyn Monroe
+                            </p>
+
+
+                            <p><i class="fas fa-angle-double-right  ml-0"></i> Marilyn Monroe
+                            </p>
+                            <p><i class="fas fa-angle-double-right  ml-0"></i>Elizabethan
+                            </p>
+
+                            <p><i class="fas fa-angle-double-right  ml-0"></i> Cary Grant
+                            </p>
+
+                            <p><i class="fas fa-angle-double-right  ml-0"></i> Gaius Julius
+                            </p>
+
+                            <p><i class="fas fa-angle-double-right  ml-0"></i> WaterMagick
+                            </p>
+
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="footer-end">
+            <p>Design by ??
+
+            </p>
+        </div>
+    </footer>
 
 </body>
 
