--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/banner.css">
+    <link rel="stylesheet" href="css/case.css">
     <link rel="stylesheet" href="css/button.css">
     <link rel="stylesheet" href="css/grid-system.css">
     <link rel="stylesheet" href="css/footer.css">
-
+    <link rel="stylesheet" href="css/who-we-are.css">
+    <link rel="stylesheet" href="css/year-20.css">
+    <link rel="stylesheet" href="css/practice-areas.css">
 </head>
 
 <body>
@@ -62,8 +65,9 @@
                 <div class="banner-text">
                     <h2>The greatest firm you can trust</h2>
                     <p>your legal solution starts here!</p>
-                    <button class="btn">read more</button>
-                    <button class="btn">purchase now</button>
+                    <div class="button">
+                        <button class="btn">read more</button>
+                        <button class="btn">purchase now</button></div>
                 </div>
 
                 <div class="banner-case">
@@ -98,6 +102,184 @@
             </div>
         </div>
     </header>
+
+
+    <div class="who-we-are">
+        <section class="pt-100">
+            <div class="container">
+                <div class="main-tittle-wrap">
+                    <img src="image/main-tittle-wrap/equality.png" alt="">
+                    <p>hello Lawplus</p>
+                    <h2>Who we are</h2>
+                </div>
+                <div class="who-text">
+                    <h2>“I don’t need lawyers who win at all costs, I really need them to win, but calculate the costs.”</h2>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur ma doling tresniu eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia doloren sit amet, consecto
+                        adipisci elit, sed quia non numquam labore et dolore magnam. </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non lore prdent, sunt in culpa qui officia deserunt mollit anim id est laborum sed ut perspiciatis.</p>
+                    <div class="button">
+                        <button class="btn blue-hover">read more</button>
+                        <button class="btn blue-hover">purchase now</button></div>
+                </div>
+            </div>
+
+        </section>
+        <div class="who-man-img">
+            <img src="image/image/Picture1.png" alt="">
+        </div>
+    </div>
+
+
+    <div class="year-20">
+        <div class="br-20year">
+            <img src="image/image/background-20year.png" alt="">
+
+
+            <div class="text-20year">
+                <h2><span>20 year</span> of experience in various cases</h2>
+                <p> It is not exhaustive since through our experience we understand that a client’s needs are always diverse and dynamic. Our firm is therefore constantly developing and is prepared at all times to step up and meet any legal challenge.</p>
+                <button class="btn blue">purchase now</button>
+
+            </div>
+        </div>
+
+
+    </div>
+
+
+    <div class="container">
+        <div class="practice-areas">
+            <div class="main-tittle-wrap">
+                <img src="image/main-tittle-wrap/equality.png" alt="">
+                <p>what we do</p>
+                <h2>practice areas</h2>
+            </div>
+
+            <div class="practice-areas-case">
+
+                <div class="row">
+
+                    <div class="col-4">
+                        <a class="d-none" href="">
+                            <div class="case-text case-bg-light">
+                                <div class="case-img">
+                                    <h2>01</h2>
+                                    <div class="line-h"></div>
+
+                                    <img src="image/practice-areas/tasks.png" alt=""></div>
+
+                                <h2>Corporate & Commercial</h2>
+                                <p>Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
+
+                                <span>real more </span>
+                            </div>
+                        </a>
+                    </div>
+
+
+
+                    <div class="col-4">
+                        <a class="d-none" href="">
+                            <div class="case-text case-bg-light">
+                                <div class="case-img">
+                                    <h2>01</h2>
+                                    <div class="line-h"></div>
+
+                                    <img src="image/practice-areas/tasks.png" alt=""></div>
+
+                                <h2>Corporate & Commercial</h2>
+                                <p>Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
+
+                                <span>real more </span>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-4">
+                        <a class="d-none" href="">
+                            <div class="case-text case-bg-light">
+                                <div class="case-img">
+                                    <h2>01</h2>
+                                    <div class="line-h"></div>
+
+                                    <img src="image/practice-areas/tasks.png" alt=""></div>
+
+                                <h2>Corporate & Commercial</h2>
+                                <p>Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
+
+                                <span>real more </span>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-4">
+                        <a class="d-none" href="">
+                            <div class="case-text case-bg-light">
+                                <div class="case-img">
+                                    <h2>01</h2>
+                                    <div class="line-h"></div>
+
+                                    <img src="image/practice-areas/tasks.png" alt=""></div>
+
+                                <h2>Corporate & Commercial</h2>
+                                <p>Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
+
+                                <span>real more </span>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-4">
+                        <a class="d-none" href="">
+                            <div class="case-text case-bg-light">
+                                <div class="case-img">
+                                    <h2>01</h2>
+                                    <div class="line-h"></div>
+
+                                    <img src="image/practice-areas/tasks.png" alt=""></div>
+
+                                <h2>Corporate & Commercial</h2>
+                                <p>Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
+
+                                <span>real more </span>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-4">
+                        <a class="d-none" href="">
+                            <div class="case-text case-bg-light">
+                                <div class="case-img">
+                                    <h2>01</h2>
+                                    <div class="line-h"></div>
+
+                                    <img src="image/practice-areas/tasks.png" alt=""></div>
+
+                                <h2>Corporate & Commercial</h2>
+                                <p>Claritas est etiam processus dynamicus, qui sequitur mutationem</p>
+
+                                <span>real more </span>
+                            </div>
+                        </a>
+                    </div>
+
+
+
+
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+
+
+
+
+
+
 
 
     <footer>
